--- a/Store/storeshop/templates/storeshop/buy.html
+++ b/Store/storeshop/templates/storeshop/buy.html
@@ -58,7 +58,7 @@
               </li>
               {%if user.is_authenticated%}
               <li class="nav-item active">
-                  <a class="nav-link" href="{%url 'storeshop:home'%}">{{user.name}} {{user.fullname}}</a>
+                  <a class="nav-link" href="{%url 'profileStudent:prof'%}">{{user.name}} {{user.fullname}}</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="{%url 'Users:logout'%}">Выйти</a>
@@ -69,6 +69,9 @@
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="{%url 'Users:register'%}">Регистрация</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="{%url 'profileStudent:prof'%}">Регистрация</a>
               </li>
               {%endif%}
             </ul>
