--- a/Store/profileStudent/templates/profileStudent/add_teacher.html
+++ b/Store/profileStudent/templates/profileStudent/add_teacher.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 {% load custom_filters %}
-<html>
+<html lang="ru">
 
 <head>
   <!-- Basic -->
@@ -14,7 +14,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Профиль ученика</title>
+  <title>Выбор предметов</title>
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
   <link href="{% static 'css/style.css' %}" rel="stylesheet" />
@@ -42,7 +42,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="{% url 'store:home' %}">
             <span>
-              Профиль ученика {{user.first_name}} {{user.last_name}}
+              Добавления учителя
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +52,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="{%url 'profileStudent:prof'%}">{{user.name}} {{user.fullname}}</a>
+                <a class="nav-link" href="{% url 'profileStudent:prof' %}">{{ user.name }} {{ user.fullname }}</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'store:home' %}">Домой</a>
@@ -62,6 +62,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'Users:logout' %}">Выйти</a>
+              </li>
             </ul>
           </div>
         </nav>
@@ -69,70 +70,53 @@
     </header>
   </div>
 
-  <!-- Student Profile Section -->
-  <section class="profile_section layout_padding">
-    <div class="container">
-      <div class="detail-box">
-        <h1>Профиль ученика {{ user.name }} {{ user.fullname }}</h1>
-      </div>
-      <div class="profile_container">
-        <div class="box">
-          <div class="detail-box">
-            <h5>Имя: {{ user.name }}</h5>
-            <p>Email: {{ user.email }}</p>
-                {% for predment in predment_no_teacher %}
-                        <p>У вас нету учителя по предмету: {{ predment }}</p>
-                        <a href="{% url 'profileStudent:add' %}" class="btn btn-primary">Добавить учителя</a>
-                {% endfor %}
+  <div class="container">
+    <h1>Выберите предметы</h1>
+    <form method="POST">
+      {% csrf_token %}
+      <select name="subjects" id="subjects" size="5" multiple class="form-control">
+        {% for subject in subjects %}
+          <option value="{{ subject.id }}" {% if subject in user.selected_subjects.all %}selected{% endif %}>
+            {{ subject.name }}
+          </option>
+        {% endfor %}
+      </select>
+      <br />
 
+      <!-- Отображение учителей -->
+      <h2>Учителя</h2>
+      <div id="teachersList">
+        {% if teachers %}
+          <div class="row">
+            {% for teacher in teachers %}
+              <div class="col-md-4">
+                <div class="teacher-card">
+                  <!-- Фотография учителя -->
+                  <img src="{{ teacher.photo_teacher }}" alt="Фото учителя" class="teacher-photo" style="width: 100px; height: 100px; object-fit: cover;">
+                  <div class="teacher-info">
+                    <p>{{ teacher.first_name }} {{ teacher.last_name }}</p>
+                    <p>Email: {{ teacher.email }}</p>
+                    <!-- Кнопка выбрать учителя -->
+                    <a href="{% url 'select_teacher' teacher.id %}" class="btn btn-primary">Выбрать учителя</a>
+                  </div>
+                </div>
+              </div>
+            {% empty %}
+              <div class="col-12">
+                <p>Нет доступных учителей для выбранных предметов.</p>
+              </div>
+            {% endfor %}
           </div>
-        </div>
+        {% endif %}
       </div>
-    </div>
-  </section>
 
-  <!-- Schedule Section -->
-  <section class="schedule_section layout_padding">
-    <div class="container">
-      <h2>Электронное расписание</h2>
-      <table class="table table-bordered">
-        <thead class="thead-light">
-          <tr>
-            <th>День недели</th>
-            <th>Время</th>
-            <th>Предмет</th>
-            <th>Учитель</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for lesson in user.schedule.all %}
-          <tr>
-            <td>
-              {% with lesson.time|time_to_schedule as schedule %}
-                {{ schedule.day }}
-              {% endwith %}
-            </td>
-            <td>
-              {% with lesson.time|time_to_schedule as schedule %}
-                {{ schedule.time }}
-              {% endwith %}
-            </td>
-            <td>{{ lesson.subject|default:"-" }}</td>
-            <td>{{ lesson.teacher|default:"-" }}</td>
-          </tr>
-          {% empty %}
-          <tr>
-            <td colspan="4">Нет данных о расписании.</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
-  </section>
+      <button type="submit" class="btn btn-primary">Подтвердить выбор</button>
+    </form>
+  </div>
 
   <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
   <script src="{% static 'js/bootstrap.js' %}"></script>
-  <script src="{% static 'js/custom.js' %}"></script>
 </body>
 
 </html>
+
